# pytest-alt-reg

./: .gitignore  Makefile  README.md  pyproject.toml
pytest_alt_reg/: chart_regression.py  common.py  constants.py  plugin.py  utils.py
tests/: test_chart_regression.py
tests/test_chart_regression/: test_bar_chart.json
